Approve itinerary
